--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "pino-http": "^10.0.0",
+    "randomcolor": "^0.6.2",
     "socket.io": "^4.7.5",
     "swagger-ui-express": "^5.0.0",
     "zod": "^3.22.4"
@@ -35,6 +36,7 @@
     "@biomejs/biome": "1.8.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/randomcolor": "^0.5.9",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "husky": "^9.0.11",
